version 20070912_2
Fixed small bug in the text handling that was causing Text::WikiCreole
to choke on making paragraphs.

version 20070912_1
Added the Text::WikiCreole module and the option of using it to
parse the html.

version 20070829_1
In the "links" view, allow backing up of all the currently viewed
pages (and their options) to a zipped tarball.  Also, made the interface
for these two options a bit more verbose and obvious.

version 20070717_4
Resolve page aliases when calculating diffs for a page
for the rollovers in the links page.

version 20070717_3
Updated the style of the rollover box a bit.

version 20070717_2
Forgot to escape single quotes in the diff rollovers.

version 20070717_1
Added rollovers for the diffs of the latest four revisions to
the PH_links page.

version 20070710_3
Allow page links with a different label than the page name.

version 20070710_2
If you have no_opts specified, then it will propogate to pages
which are linked from the current page.  Added several tests to
make sure this happens, too.

version 20070710_1
A simple no_opts so that it remains after a page edit.

version 20070704_2
Added pruning to the page links list.  Added a couple of tests
for it, too.

version 20070704_1
Sped up the rss feed generation for the links search by removing
the check for each page name's validity.

version 20070703_1
Added the rss feed for the page links search.

version 20070702_1
Removed the page name check from the recursive links processing.
This greatly increases the speed of the processing.

version 20070622_2
Made the edit "cancel" button do the right thing instead of just
going 'back'.  Added a handful of tests to the Selenium tests
to check for the proper functioning of the "cancel" button.

version 20070622_1
Fix for: If you click "edit this page" on an older page, it
correctly warns you that you are editing an older version.
If you click on "Edit the latest version", it continues to
warn you that you are editing an older version.
